Updated the internal dependencies in composer.json to use github.com instead of github.umn.edu.

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   "repositories": [
     {
       "type": "vcs",
-      "url": "git@github.umn.edu:Libraries/set-php.git"
+      "url": "git@github.com:UMNLibraries/set-php.git"
     }
   ],   
 
